[package]
name = "nu_plugin_tree"
version = "0.1.0"
authors = ["Darren Schroeder <343840+fdncred@users.noreply.github.com>"]
edition = "2024"
description = "a nushell plugin called tree"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for local development, you can use a path dependency
nu-plugin = { path = "../nushell/crates/nu-plugin" }
nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin", "sqlite"] }
# nu-plugin = "0.107.0"
# nu-protocol = { version = "0.107.0", features = ["plugin"] }

ptree = "0.5.2"
anyhow = "1.0.100"
git2 = "0.20.3"
ignore = "0.4.25"
lscolors = "0.21.0"
nu-ansi-term = "0.50.3"
devicons = "0.6.12"

[dev-dependencies]
nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
# nu-plugin-test-support = { version = "0.107.0" }
